// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ToolPart snapshot: bash > matches the expanded card 1`] = `
<div>
  <div
    class="reply-tool my-1 min-w-0"
    data-status="completed"
    data-testid="tool-part"
  >
    <button
      aria-controls="cl-25"
      aria-expanded="true"
      class="flex min-w-0 w-full items-center gap-1.5 rounded-sm py-1 text-left text-sm outline-none hover:bg-bg-sunken/50 focus:bg-accent-soft"
      data-testid="tool-toggle"
      type="button"
    >
      <span
        aria-hidden=""
        class="mt-px inline-block shrink-0 text-fg-faint transition-transform rotate-90"
      >
        ▸
      </span>
      <svg
        aria-hidden=""
        class="h-3.5 w-3.5 shrink-0 text-success"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 16 16"
      >
        <path
          d="M3 8.5l3.5 3.5L13 5"
        />
      </svg>
      <svg
        aria-hidden=""
        class="h-3.5 w-3.5 shrink-0 text-fg-faint"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 16 16"
      >
        <path
          d="M2.5 3.5 6.5 8l-4 4.5"
        />
        <path
          d="M8 12.5h5.5"
        />
      </svg>
      <span
        class="min-w-0 flex-1 font-code text-fg-secondary whitespace-pre-wrap break-words"
        data-testid="tool-summary"
      >
        Ran command
      </span>
      <span
        class="shrink-0 font-code text-xs text-fg-faint"
        data-testid="tool-duration"
      >
        3s
      </span>
      <span
        class="sr-only"
        data-testid="tool-status-label"
      >
        bash completed
      </span>
    </button>
    <div
      class="reply-tool-detail mt-1 space-y-2"
      data-testid="tool-detail"
      id="cl-25"
    >
      <div
        class="overflow-hidden rounded-sm bg-bg-sunken font-code text-xs"
        data-testid="tool-terminal"
      >
        <div
          class="flex items-center justify-between gap-2 border-b border-bg-base/40 px-2 py-1"
        >
          <span
            class="truncate text-fg-faint"
          >
            Terminal
          </span>
          <button
            class="shrink-0 rounded-sm px-1.5 py-0.5 text-[10px] text-fg-faint outline-none hover:bg-accent-soft hover:text-fg-primary focus:bg-accent-soft"
            data-testid="tool-copy"
            type="button"
          >
            Copy
          </button>
        </div>
        <div
          class="space-y-1 px-2 py-1.5"
        >
          <div
            class="text-fg-primary"
          >
            <span
              class="select-none text-success"
            >
              $ 
            </span>
            ls src
          </div>
          <pre
            class="max-h-80 overflow-y-auto whitespace-pre-wrap break-words text-fg-secondary"
          >
            auth/
components/

          </pre>
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToolPart snapshot: edit > matches the expanded card 1`] = `
<div>
  <div
    class="reply-tool my-1 min-w-0"
    data-status="completed"
    data-testid="tool-part"
  >
    <button
      aria-controls="cl-26"
      aria-expanded="true"
      class="flex min-w-0 w-full items-center gap-1.5 rounded-sm py-1 text-left text-sm outline-none hover:bg-bg-sunken/50 focus:bg-accent-soft"
      data-testid="tool-toggle"
      type="button"
    >
      <span
        aria-hidden=""
        class="mt-px inline-block shrink-0 text-fg-faint transition-transform rotate-90"
      >
        ▸
      </span>
      <svg
        aria-hidden=""
        class="h-3.5 w-3.5 shrink-0 text-success"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 16 16"
      >
        <path
          d="M3 8.5l3.5 3.5L13 5"
        />
      </svg>
      <svg
        aria-hidden=""
        class="h-3.5 w-3.5 shrink-0 text-fg-faint"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 16 16"
      >
        <path
          d="m11.3 2.8 1.9 1.9-6.9 6.9H4.4v-1.9Z"
        />
      </svg>
      <span
        class="min-w-0 flex-1 font-code text-fg-secondary whitespace-pre-wrap break-words"
        data-testid="tool-summary"
      >
        Edited src/auth/login.ts
      </span>
      <span
        class="shrink-0 font-code text-xs text-fg-faint"
        data-testid="tool-duration"
      >
        1s
      </span>
      <span
        class="sr-only"
        data-testid="tool-status-label"
      >
        edit completed
      </span>
    </button>
    <div
      class="reply-tool-detail mt-1 space-y-2"
      data-testid="tool-detail"
      id="cl-26"
    >
      <div
        class="space-y-1"
        data-testid="tool-diff"
      >
        <div
          class="flex items-center justify-between gap-2"
        >
          <span
            class="truncate font-code text-xs text-fg-secondary"
          >
            src/auth/login.ts
          </span>
          <button
            class="shrink-0 rounded-sm px-1.5 py-0.5 text-[10px] text-fg-faint outline-none hover:bg-accent-soft hover:text-fg-primary focus:bg-accent-soft"
            data-testid="tool-copy"
            type="button"
          >
            Copy
          </button>
        </div>
        <div
          class="max-h-80 overflow-y-auto rounded-sm bg-bg-sunken px-2 py-1 font-code text-xs leading-relaxed"
        >
          <div
            class="whitespace-pre-wrap break-words px-1 bg-danger/15 text-danger"
          >
            - 
              return false;
          </div>
          <div
            class="whitespace-pre-wrap break-words px-1 bg-success/15 text-success"
          >
            + 
              return true;
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToolPart snapshot: glob > matches the expanded card 1`] = `
<div>
  <div
    class="reply-tool my-1 min-w-0"
    data-status="completed"
    data-testid="tool-part"
  >
    <button
      aria-controls="cl-29"
      aria-expanded="true"
      class="flex min-w-0 w-full items-center gap-1.5 rounded-sm py-1 text-left text-sm outline-none hover:bg-bg-sunken/50 focus:bg-accent-soft"
      data-testid="tool-toggle"
      type="button"
    >
      <span
        aria-hidden=""
        class="mt-px inline-block shrink-0 text-fg-faint transition-transform rotate-90"
      >
        ▸
      </span>
      <svg
        aria-hidden=""
        class="h-3.5 w-3.5 shrink-0 text-success"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 16 16"
      >
        <path
          d="M3 8.5l3.5 3.5L13 5"
        />
      </svg>
      <svg
        aria-hidden=""
        class="h-3.5 w-3.5 shrink-0 text-fg-faint"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 16 16"
      >
        <path
          d="M2 3.5h3.5l1.5 1.5H13a1 1 0 0 1 1 1V12a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1Z"
        />
      </svg>
      <span
        class="min-w-0 flex-1 font-code text-fg-secondary whitespace-pre-wrap break-words"
        data-testid="tool-summary"
      >
        Searched src/**/*.ts
      </span>
      <span
        class="shrink-0 font-code text-xs text-fg-faint"
        data-testid="tool-duration"
      >
        1s
      </span>
      <span
        class="sr-only"
        data-testid="tool-status-label"
      >
        glob completed
      </span>
    </button>
    <div
      class="reply-tool-detail mt-1 space-y-2"
      data-testid="tool-detail"
      id="cl-29"
    >
      <div
        class="space-y-1"
        data-testid="tool-list"
      >
        <div
          class="flex items-center justify-between gap-2"
        >
          <span
            class="truncate font-code text-xs text-fg-secondary"
          >
            src/**/*.ts
          </span>
          <span
            class="shrink-0 rounded-sm bg-accent-soft px-1.5 py-0.5 text-[10px] text-accent"
          >
            2 files
          </span>
        </div>
        <pre
          class="max-h-80 overflow-y-auto whitespace-pre-wrap break-words rounded-sm bg-bg-sunken px-2 py-1.5 font-code text-xs leading-relaxed text-fg-secondary"
        >
          src/auth/login.ts
src/auth/session.ts
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToolPart snapshot: grep > matches the expanded card 1`] = `
<div>
  <div
    class="reply-tool my-1 min-w-0"
    data-status="completed"
    data-testid="tool-part"
  >
    <button
      aria-controls="cl-30"
      aria-expanded="true"
      class="flex min-w-0 w-full items-center gap-1.5 rounded-sm py-1 text-left text-sm outline-none hover:bg-bg-sunken/50 focus:bg-accent-soft"
      data-testid="tool-toggle"
      type="button"
    >
      <span
        aria-hidden=""
        class="mt-px inline-block shrink-0 text-fg-faint transition-transform rotate-90"
      >
        ▸
      </span>
      <svg
        aria-hidden=""
        class="h-3.5 w-3.5 shrink-0 text-success"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 16 16"
      >
        <path
          d="M3 8.5l3.5 3.5L13 5"
        />
      </svg>
      <svg
        aria-hidden=""
        class="h-3.5 w-3.5 shrink-0 text-fg-faint"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 16 16"
      >
        <circle
          cx="7"
          cy="7"
          r="4"
        />
        <path
          d="m10.2 10.2 3.3 3.3"
        />
      </svg>
      <span
        class="min-w-0 flex-1 font-code text-fg-secondary whitespace-pre-wrap break-words"
        data-testid="tool-summary"
      >
        Searched TODO
      </span>
      <span
        class="shrink-0 font-code text-xs text-fg-faint"
        data-testid="tool-duration"
      >
        1s
      </span>
      <span
        class="sr-only"
        data-testid="tool-status-label"
      >
        grep completed
      </span>
    </button>
    <div
      class="reply-tool-detail mt-1 space-y-2"
      data-testid="tool-detail"
      id="cl-30"
    >
      <div
        class="space-y-1"
        data-testid="tool-list"
      >
        <div
          class="flex items-center justify-between gap-2"
        >
          <span
            class="truncate font-code text-xs text-fg-secondary"
          >
            TODO
          </span>
          <span
            class="shrink-0 rounded-sm bg-accent-soft px-1.5 py-0.5 text-[10px] text-accent"
          >
            1 match
          </span>
        </div>
        <pre
          class="max-h-80 overflow-y-auto whitespace-pre-wrap break-words rounded-sm bg-bg-sunken px-2 py-1.5 font-code text-xs leading-relaxed text-fg-secondary"
        >
          src/auth/login.ts:12: // TODO: rate limit
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToolPart snapshot: read > matches the expanded card 1`] = `
<div>
  <div
    class="reply-tool my-1 min-w-0"
    data-status="completed"
    data-testid="tool-part"
  >
    <button
      aria-controls="cl-27"
      aria-expanded="true"
      class="flex min-w-0 w-full items-center gap-1.5 rounded-sm py-1 text-left text-sm outline-none hover:bg-bg-sunken/50 focus:bg-accent-soft"
      data-testid="tool-toggle"
      type="button"
    >
      <span
        aria-hidden=""
        class="mt-px inline-block shrink-0 text-fg-faint transition-transform rotate-90"
      >
        ▸
      </span>
      <svg
        aria-hidden=""
        class="h-3.5 w-3.5 shrink-0 text-success"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 16 16"
      >
        <path
          d="M3 8.5l3.5 3.5L13 5"
        />
      </svg>
      <svg
        aria-hidden=""
        class="h-3.5 w-3.5 shrink-0 text-fg-faint"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 16 16"
      >
        <rect
          height="13"
          rx="1.5"
          width="10"
          x="3"
          y="1.5"
        />
        <path
          d="M6 5.5h4M6 8h4M6 10.5h2.5"
        />
      </svg>
      <span
        class="min-w-0 flex-1 font-code text-fg-secondary whitespace-pre-wrap break-words"
        data-testid="tool-summary"
      >
        Read src/auth/session.ts
      </span>
      <span
        class="shrink-0 font-code text-xs text-fg-faint"
        data-testid="tool-duration"
      >
        1s
      </span>
      <span
        class="sr-only"
        data-testid="tool-status-label"
      >
        read completed
      </span>
    </button>
    <div
      class="reply-tool-detail mt-1 space-y-2"
      data-testid="tool-detail"
      id="cl-27"
    >
      <div
        class="space-y-1"
        data-testid="tool-code"
      >
        <div
          class="flex items-center justify-between gap-2"
        >
          <span
            class="truncate font-code text-xs text-fg-secondary"
          >
            src/auth/session.ts
          </span>
          <button
            class="shrink-0 rounded-sm px-1.5 py-0.5 text-[10px] text-fg-faint outline-none hover:bg-accent-soft hover:text-fg-primary focus:bg-accent-soft"
            data-testid="tool-copy"
            type="button"
          >
            Copy
          </button>
        </div>
        <pre
          class="max-h-80 overflow-y-auto whitespace-pre-wrap break-words rounded-sm bg-bg-sunken px-2 py-1.5 font-code text-xs leading-relaxed text-fg-secondary"
        >
          export const session = {
  id: 'ses_1',
};

        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToolPart snapshot: write > matches the expanded card 1`] = `
<div>
  <div
    class="reply-tool my-1 min-w-0"
    data-status="completed"
    data-testid="tool-part"
  >
    <button
      aria-controls="cl-28"
      aria-expanded="true"
      class="flex min-w-0 w-full items-center gap-1.5 rounded-sm py-1 text-left text-sm outline-none hover:bg-bg-sunken/50 focus:bg-accent-soft"
      data-testid="tool-toggle"
      type="button"
    >
      <span
        aria-hidden=""
        class="mt-px inline-block shrink-0 text-fg-faint transition-transform rotate-90"
      >
        ▸
      </span>
      <svg
        aria-hidden=""
        class="h-3.5 w-3.5 shrink-0 text-success"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 16 16"
      >
        <path
          d="M3 8.5l3.5 3.5L13 5"
        />
      </svg>
      <svg
        aria-hidden=""
        class="h-3.5 w-3.5 shrink-0 text-fg-faint"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 16 16"
      >
        <rect
          height="13"
          rx="1.5"
          width="10"
          x="3"
          y="1.5"
        />
        <path
          d="M6 5.5h4M6 8h4M6 10.5h2.5"
        />
        <path
          d="M11.5 10.5v3M10 12h3"
        />
      </svg>
      <span
        class="min-w-0 flex-1 font-code text-fg-secondary whitespace-pre-wrap break-words"
        data-testid="tool-summary"
      >
        Wrote src/auth/api.ts
      </span>
      <span
        class="shrink-0 font-code text-xs text-fg-faint"
        data-testid="tool-duration"
      >
        1s
      </span>
      <span
        class="sr-only"
        data-testid="tool-status-label"
      >
        write completed
      </span>
    </button>
    <div
      class="reply-tool-detail mt-1 space-y-2"
      data-testid="tool-detail"
      id="cl-28"
    >
      <div
        class="space-y-1"
        data-testid="tool-code"
      >
        <div
          class="flex items-center justify-between gap-2"
        >
          <span
            class="truncate font-code text-xs text-fg-secondary"
          >
            src/auth/api.ts
          </span>
          <button
            class="shrink-0 rounded-sm px-1.5 py-0.5 text-[10px] text-fg-faint outline-none hover:bg-accent-soft hover:text-fg-primary focus:bg-accent-soft"
            data-testid="tool-copy"
            type="button"
          >
            Copy
          </button>
        </div>
        <pre
          class="max-h-80 overflow-y-auto whitespace-pre-wrap break-words rounded-sm bg-bg-sunken px-2 py-1.5 font-code text-xs leading-relaxed text-fg-secondary"
        >
          export const api = { login: () =&gt; {} };
        </pre>
      </div>
    </div>
  </div>
</div>
`;
